# sf_agents

./: .env.example  .gitignore  AGENT_SELECTION_FIX.md  CREWAI_COMPLIANCE_PLAN.md  CREWOUTPUT_ERROR_FIX.md  DEPLOYMENT-SUCCESS.md  DICTIONARY_ACCESS_ERROR_FIX.md  EMERGENCY-FIX.md  ERROR_ANALYSIS_AND_FIX.md  FASTAPI_WEBSOCKET_IMPLEMENTATION.md  FIXES_SUMMARY.md  HIERARCHICAL_AGENT_RESTRUCTURE.md  JSON_PARSING_ERROR_FIX.md  LOG_ANALYSIS_REPORT.md  Procfile  README.md  SESSION_STATE_ERROR_FIX.md  SIDEBAR_RESTORED_AND_FIXES.md  SIMPLE_CHAT_FINAL_IMPLEMENTATION.md  SIMPLE_CHAT_INTERFACE_IMPLEMENTATION.md  SYNTAX_ERROR_FIX.md  app.py  config.py  deployment-guide.md  fastapi_app.py  fix-deployment.md  pyproject.toml  railway.json  requirements-gunicorn.txt  requirements-minimal.txt  requirements-render.txt  requirements.txt  salesforce_crew.py  setup.py  start_fastapi.sh
.streamlit/: config.toml
agents/: __init__.py  data_structures.py  dependency_resolver_agent.py  error_handler.py  master_agent.py  master_orchestrator_agent.py  memory_manager.py  salesforce_connector.py  salesforce_expert_agent.py  simple_agent.py  technical_architect_agent.py  unified_agent_system.py
config/: agents.yaml  tasks.yaml
frontend/: salesforce_chat.html  test_client.html
output/: .gitkeep  implementation_plan.json  schema_analysis.json  technical_design.json
tools/: salesforce_tool.py
