[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "salesforce-ai-agent-system"
version = "1.0.0"
description = "An intelligent lightweight AI agent system for Salesforce implementation planning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Tapas Mukherjee", email = ""},
]
keywords = ["salesforce", "ai", "agent", "lightweight", "streamlit", "implementation", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit==1.28.0",
    "python-dotenv==1.0.0",
    "requests>=2.31.0",
    "simple-salesforce>=1.12.0",
    "openai>=1.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/tapasmukherjee/sf_agents"
Documentation = "https://github.com/tapasmukherjee/sf_agents/blob/main/README.md"
Repository = "https://github.com/tapasmukherjee/sf_agents"
"Bug Tracker" = "https://github.com/tapasmukherjee/sf_agents/issues"

[project.scripts]
sf-agent = "app:main" 